[package]
name = "nar_dev_utils"
version = "0.1.0"
description = "用于NARS相关项目开发的实用工具包"
authors = ["Argon (ARCJ137442)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ! 【2024-03-13 21:05:56】目前没有任何依赖

[features]
# 默认：开启所有特性
default = ["bundled"]

# 包含除「实用宏」外的所有特性 | 宏是默认启用的
bundled = ["floats", "iterators", "str_process"]

# * 下面是所有实用功能，一个模块对应同名的一个特性 * #
floats = []
iterators = []
str_process = []
